consistent-hash.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service # o user bate aqui no host
  http:
    - route:
      - destination:
          host: nginx-service
          subset: all

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service 
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user" # x geralmente e usado para experimeto
  subsets:
    - name: all
      labels:
        app: nginx
