dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service 
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN  
  subsets:
    - name: v1 # destination configurado VirtualService, vai para o Pod version: A
      labels:
        version: A # 
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
