fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    # aqui toda chamada vai demorar 10s para encaminhar, e isso vai 100% do tráfico
    - fault: 
        delay:
          # fixedDelay: 7s
          # percentage:
          #   value: 50
        abort: # aqui para aborta 10$
          httpStatus: 500
          percentage:
            value: 10
      route:
      - destination:
          host: nginx-service
          subset: all

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user" # x geralmente e usado para experimeto
  subsets:
    - name: all # destination configurado VirtualService, vai para o Pod version: A
      labels:
        app: nginx
