gateway-domains.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*.fullcycle" # Precisaria de um dominio "site.com.br", mas como nao tem, usamos "*" que aceita tudo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: 
  - "a.fullcycle" # aqui vai precisar bater como os spec:servers:hosts do Gateway
  gateways:
  - ingress-gateway-k3s # aqui vai o metadata:name do Gateway
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vsb
spec:
  hosts: 
  - "b.fullcycle" # aqui vai precisar bater como os spec:servers:hosts do Gateway
  gateways:
  - ingress-gateway-k3s # aqui vai o metadata:name do Gateway
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2
