gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*" # Precisaria de um dominio "site.com.br", mas como nao tem, usamos "*" que aceita tudo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: 
  - "*" # aqui vai precisar bater como os spec:servers:hosts do Gateway
  gateways:
  - ingress-gateway-k3s # aqui vai o metadata:name do Gateway
  http:
    - match:
      - uri:
          prefix: "/b"
      route:  
      - destination:
          host: nginx-service
          subset: v2
    - match:
      - uri:
          prefix: "/"
      route:  
      - destination:
          host: nginx-service
          subset: v1       
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service 
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1 # vai o mesmo nome spec:http:route:destination:subset que no VirtualService que eu quero que bata
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
